# MLCourse_Forest_Cover

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
mlruns/0/: meta.yaml
mlruns/0/06f0f52a41b94a1a98d19e8ce3bca46b/: meta.yaml
mlruns/0/06f0f52a41b94a1a98d19e8ce3bca46b/artifacts/model gini/: MLmodel  conda.yaml
mlruns/0/06f0f52a41b94a1a98d19e8ce3bca46b/metrics/: F1  ROC AUC  accuracy
mlruns/0/06f0f52a41b94a1a98d19e8ce3bca46b/tags/: mlflow.log-model.history
mlruns/0/32aa1736fcc24d809ea6119f83e92ee6/: meta.yaml
mlruns/0/32aa1736fcc24d809ea6119f83e92ee6/artifacts/model/: MLmodel  model.pkl
mlruns/0/32aa1736fcc24d809ea6119f83e92ee6/metrics/: F1  ROC AUC  accuracy
mlruns/0/32aa1736fcc24d809ea6119f83e92ee6/tags/: mlflow.log-model.history
mlruns/0/3347d3e49d104674b8a8a9fdb68a6863/: meta.yaml
mlruns/0/3347d3e49d104674b8a8a9fdb68a6863/metrics/: F1  ROC AUC  accuracy
src/forest_cover_type/: EDA_pandas_profiling.py  pipeline.py  train.py
tests/: test_train.py
