[tool.poetry]
name = "mlcourse_forest_cover"
version = "0.1.0"
description = "Homework for ML Course"
authors = ["Teka Lishoo <teka.lishoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
