[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "Homework for ML Course"
authors = ["Teka Lishoo <teka.lishoo@gmail.com>"]

[tool.poetry.scripts]
train = "forest_cover_type.train:train"
EDA = "forest_cover_type.EDA_pandas_profiling:eda"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
sklearn = "^0.0"
click = "^8.1.2"
pandas-profiling = "^3.1.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"
mlflow = "^1.25.1"
Boruta = "^0.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^13.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

